[gd_scene load_steps=21 format=3 uid="uid://c2x1vf5wh7hr8"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_p6kgo"]
[ext_resource type="Texture2D" uid="uid://cyl5ou74o5epx" path="res://Images/UI board Large  stone.png" id="1_y44tt"]
[ext_resource type="Texture2D" uid="uid://y0u768d3d1ja" path="res://Images/UI board Large  parchment.png" id="2_tqupj"]
[ext_resource type="Texture2D" uid="uid://v0nsl7h20c4t" path="res://Images/TextBTN_Big.png" id="3_k2pha"]
[ext_resource type="FontFile" uid="uid://b7r0m4wv7n1s2" path="res://Fonts/buddychampion.ttf" id="4_6t25h"]
[ext_resource type="Texture2D" uid="uid://b65mbochgeqv4" path="res://Images/TextBTN_Big_Pressed.png" id="4_it0ki"]
[ext_resource type="Texture2D" uid="uid://br33midyugaa5" path="res://Images/ModButton.png" id="6_o62n3"]
[ext_resource type="Texture2D" uid="uid://cdimxm8almcha" path="res://Images/IRONY TITLE  Large.png" id="6_r4nj1"]
[ext_resource type="FontFile" uid="uid://cs63ql10bief" path="res://Fonts/buddychampionrotate.ttf" id="7_8gbbx"]
[ext_resource type="AudioStream" uid="uid://fsymfwh1g8d1" path="res://Sounds/Crash Bandicoot 1 Theme.wav" id="9_7vyfc"]
[ext_resource type="AudioStream" uid="uid://bn1tn2a2e7jdv" path="res://Sounds/oink1.wav" id="10_xn064"]
[ext_resource type="AudioStream" uid="uid://bt7suxliafnwu" path="res://Sounds/oink2.wav" id="11_p6ftk"]
[ext_resource type="AudioStream" uid="uid://05qki6htr1km" path="res://Sounds/oink3.wav" id="12_lu1sn"]
[ext_resource type="AudioStream" uid="uid://dbhfggxb3plcw" path="res://Sounds/oink4.wav" id="13_s85o5"]
[ext_resource type="AudioStream" uid="uid://cyomk1bwwj21b" path="res://Sounds/oink5.wav" id="14_j7nwf"]
[ext_resource type="AudioStream" uid="uid://dkp2johb8vcnc" path="res://Sounds/oink6.wav" id="15_8pcq6"]
[ext_resource type="AudioStream" uid="uid://bjgrhwxbgopqr" path="res://Sounds/oink7.wav" id="16_bk4wv"]
[ext_resource type="AudioStream" uid="uid://dvw66ibj15d40" path="res://Sounds/oink8.wav" id="17_djmjv"]
[ext_resource type="AudioStream" uid="uid://biln2w7msr8jr" path="res://Sounds/oink9.wav" id="18_qspok"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_svkjy"]
streams_count = 9
stream_0/stream = ExtResource("10_xn064")
stream_0/weight = 1.0
stream_1/stream = ExtResource("11_p6ftk")
stream_1/weight = 1.0
stream_2/stream = ExtResource("12_lu1sn")
stream_2/weight = 1.0
stream_3/stream = ExtResource("13_s85o5")
stream_3/weight = 1.0
stream_4/stream = ExtResource("14_j7nwf")
stream_4/weight = 1.0
stream_5/stream = ExtResource("15_8pcq6")
stream_5/weight = 1.0
stream_6/stream = ExtResource("16_bk4wv")
stream_6/weight = 1.0
stream_7/stream = ExtResource("17_djmjv")
stream_7/weight = 1.0
stream_8/stream = ExtResource("18_qspok")
stream_8/weight = 1.0

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p6kgo")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(2.08667, 1.74313)
texture = ExtResource("1_y44tt")
centered = false

[node name="PaperControl" type="Control" parent="Background"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Background/PaperControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Paper" type="Sprite2D" parent="Background/PaperControl/MarginContainer"]
position = Vector2(29.7224, 27.6169)
texture = ExtResource("2_tqupj")
centered = false

[node name="ButtonContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.111
anchor_top = 0.641
anchor_right = 0.873
anchor_bottom = 0.82
offset_left = -0.00901794
offset_top = -0.0750122
offset_right = -1.28711
offset_bottom = -3.50006
theme_override_constants/separation = 20
alignment = 1

[node name="Start" type="TextureButton" parent="ButtonContainer"]
layout_mode = 2
texture_normal = ExtResource("3_k2pha")
texture_pressed = ExtResource("4_it0ki")
texture_hover = ExtResource("6_o62n3")

[node name="Label" type="Label" parent="ButtonContainer/Start"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.985
anchor_bottom = 0.474
offset_right = 0.0699768
offset_bottom = -0.00801086
theme_override_fonts/font = ExtResource("4_6t25h")
theme_override_font_sizes/font_size = 64
text = "START"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options" type="TextureButton" parent="ButtonContainer"]
layout_mode = 2
texture_normal = ExtResource("3_k2pha")
texture_pressed = ExtResource("4_it0ki")
texture_hover = ExtResource("6_o62n3")

[node name="Label" type="Label" parent="ButtonContainer/Options"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.985
anchor_bottom = 0.474
offset_right = 0.0699768
offset_bottom = -0.00801086
theme_override_fonts/font = ExtResource("4_6t25h")
theme_override_font_sizes/font_size = 64
text = "OPTIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit" type="TextureButton" parent="ButtonContainer"]
layout_mode = 2
texture_normal = ExtResource("3_k2pha")
texture_pressed = ExtResource("4_it0ki")
texture_hover = ExtResource("6_o62n3")

[node name="Label" type="Label" parent="ButtonContainer/Exit"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.985
anchor_bottom = 0.474
offset_right = 0.0699768
offset_bottom = -0.00801086
theme_override_fonts/font = ExtResource("4_6t25h")
theme_override_font_sizes/font_size = 64
text = "EXIT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TitleBackground" type="Sprite2D" parent="."]
position = Vector2(948, 370)
scale = Vector2(2.32569, 2.32569)
texture = ExtResource("6_r4nj1")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.214
anchor_top = 0.243
anchor_right = 0.775
anchor_bottom = 0.444
offset_left = 1.33398
offset_top = 7.77499
offset_right = -4.22498
offset_bottom = 0.699982
theme_override_fonts/font = ExtResource("7_8gbbx")
theme_override_font_sizes/font_size = 192
text = "PIG ONE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_7vyfc")
autoplay = true

[node name="Oinker" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_svkjy")

[connection signal="button_down" from="ButtonContainer/Start" to="." method="_on_start_button_down"]
[connection signal="button_up" from="ButtonContainer/Start" to="." method="_on_start_button_up"]
[connection signal="mouse_entered" from="ButtonContainer/Start" to="." method="_on_button_entered"]
[connection signal="button_down" from="ButtonContainer/Options" to="." method="_on_options_button_down"]
[connection signal="button_up" from="ButtonContainer/Options" to="." method="_on_options_button_up"]
[connection signal="mouse_entered" from="ButtonContainer/Options" to="." method="_on_button_entered"]
[connection signal="button_down" from="ButtonContainer/Exit" to="." method="_on_exit_button_down"]
[connection signal="button_up" from="ButtonContainer/Exit" to="." method="_on_exit_button_up"]
[connection signal="mouse_entered" from="ButtonContainer/Exit" to="." method="_on_button_entered"]
